--- a/src/ui/comment/CommentVisibility.css
+++ b/src/ui/comment/CommentVisibility.css
@@ -4,5 +4,13 @@
 }
 
 .comment .owner-line .visibility .principal {
-    padding-left: .4rem;
+    margin-left: .4rem;
+}
+
+.comment .owner-line .visibility .principal.senior {
+    background-color: var(--bs-gray-500);
+    color: white;
+    border: 1px solid var(--bs-gray-500);
+    border-radius: 5px;
+    padding: 2px 4px;
 }
