Display visibility of the subscribers/subscriptions list.

--- a/src/ui/control/Principal.css
+++ b/src/ui/control/Principal.css
@@ -1,9 +1,9 @@
 .principal {
-    font-size: .8rem;
+    font-size: .8em;
     color: var(--bs-gray-500);
 }
 
 .principal .caption {
-    font-size: .9rem;
+    font-size: .9em;
     font-weight: bold;
 }
