Added default value and moved CSS for class "senior" to <Principal>.

--- a/src/ui/control/Principal.css
+++ b/src/ui/control/Principal.css
@@ -1,9 +1,17 @@
 .principal {
-    font-size: .8em;
+    font-size: .8rem;
     color: var(--bs-gray-500);
 }
 
 .principal .caption {
-    font-size: .9em;
+    font-size: .9rem;
     font-weight: bold;
+}
+
+.principal.senior {
+    background-color: var(--bs-gray-500);
+    color: white;
+    border: 1px solid var(--bs-gray-500);
+    border-radius: 5px;
+    padding: 2px 4px;
 }
