Link previews on mobile made slightly narrower
Link previews on mobile should be slightly narrower than the screen,
otherwise horizonal scrolling appears.

Thanks-to: eliduvid

--- a/src/ui/entry/EntryLinkPreview.css
+++ b/src/ui/entry/EntryLinkPreview.css
@@ -21,6 +21,7 @@ DIV.link-preview {
 @media only screen and (max-width: 575px) {
     A.link-preview, DIV.link-preview {
         display: flex;
+        width: 99.6vw;
         margin-left: -.5rem;
         margin-right: -.5rem;
     }
