Display link preview image loading message.

--- a/src/ui/entry/EntryLinkPreviewImage.css
+++ b/src/ui/entry/EntryLinkPreviewImage.css
@@ -34,3 +34,9 @@
         max-height: 67vw;
     }
 }
+
+.link-preview .image-loading {
+    padding-left: 1rem;
+    padding-bottom: .5rem;
+    border-bottom: solid 1px var(--bs-gray-400);
+}
