Renaming and deleting tokens.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -1,6 +1,7 @@
 :root {
     --body-background: #e9ebee;
     --highlight: rgba(0, 0, 0, .05);
+    --highlight-light: rgba(0, 0, 0, .025);
     --highlight-blue: rgba(0, 123, 255, .1);
     --highlight-cyan: #f0fafa;
 
