--- a/src/ui/settings/SettingsItemTokens.css
+++ b/src/ui/settings/SettingsItemTokens.css
@@ -1,3 +1,11 @@
+.token-info {
+    padding-left: .5rem;
+}
+
+.token-info:hover {
+    background-color: var(--highlight-light);
+}
+
 .token-info .icon {
     color: var(--bs-gray-500);
 }
@@ -10,6 +18,29 @@
 .token-info .btn:focus:not(:focus-visible) {
     outline: 0;
     box-shadow: none;
+}
+
+.token-info .current {
+    color: var(--bs-success);
+    font-style: italic;
+}
+
+.token-info .token-button {
+    border: 0;
+    border-radius: 5px;
+    background: none;
+    font-size: 80%;
+    color: var(--bs-gray-600);
+    margin-left: .25rem;
+}
+
+.token-info .token-button:hover {
+    background-color: var(--highlight);
+    color: var(--bs-gray-800);
+}
+
+.token-info .token-button.red:hover {
+    color: var(--bs-red);
 }
 
 .token-info .details {
