Bottom panel should be above the text on the same level as the top panel.

--- a/src/ui/bottommenu/BottomMenu.css
+++ b/src/ui/bottommenu/BottomMenu.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    z-index: var(--zindex-page-header);
 }
 
 #bottom-menu .new-post-button {
