--- a/src/ui/page/PageHeader.css
+++ b/src/ui/page/PageHeader.css
@@ -8,12 +8,17 @@
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
                 0 1px 10px 0 rgba(0, 0, 0, .12),
                 0 2px 4px -1px rgba(0, 0, 0, .2);
+    transition: all .5s;
 }
 
 @media only screen and (max-width: 575px) {
     #page-header {
         padding-top: .3rem;
     }
+}
+
+#page-header.hidden {
+    top: -.75rem;
 }
 
 #page-header .panel {
