--- a/src/ui/mainmenu/vertical/VerticalMenu.css
+++ b/src/ui/mainmenu/vertical/VerticalMenu.css
@@ -9,6 +9,10 @@
     padding: 0 .5rem 1rem .5rem;
 }
 
+#vertical-menu .nav-item .nav-link {
+    text-transform: uppercase;
+}
+
 #vertical-menu .connection-button {
     cursor: pointer;
     color: var(--status-icon);
