--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -71,3 +71,17 @@ DETAILS[open] {
 .dialog-help .btn-close {
     float: right;
 }
+
+.nav.nav-pills .nav-link.active:hover {
+    background-color: var(--bs-primary);
+}
+
+.nav.nav-pills .nav-link:hover {
+    background-color: var(--highlight-blue);
+    cursor: pointer;
+}
+
+.nav.nav-pills .nav-link A:hover {
+    text-decoration: none;
+    color: var(--bs-primary);
+}
