--- a/src/ui/control/Principal.css
+++ b/src/ui/control/Principal.css
@@ -13,5 +13,9 @@
     color: white;
     border: 1px solid var(--bs-gray-500);
     border-radius: 5px;
-    padding: 2px 4px;
+    width: 1.4rem;
+    height: 1.65rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
