--- a/src/ui/lightbox/LightBox.css
+++ b/src/ui/lightbox/LightBox.css
@@ -18,3 +18,9 @@
 .lightbox-download {
     padding: 1px 0 1px 10px;
 }
+
+@media only screen and (min-width: 576px) {
+    .ril__navButtons {
+        height: calc(100vh - 100px - 13rem) !important;
+    }
+}
