Second dropdown menu and the bottom of a posting in detailed view.

--- a/src/ui/entry/EntryMenu.css
+++ b/src/ui/entry/EntryMenu.css
@@ -1,7 +1,7 @@
 .entry .menu {
     position: absolute;
-    top: 0.2rem;
-    right: 0.4rem;
+    top: .2rem;
+    right: .4rem;
     background-color: transparent;
     border: 0;
 }
