--- a/src/ui/blockdialog/BlockDialog.css
+++ b/src/ui/blockdialog/BlockDialog.css
@@ -1,7 +1,7 @@
 .block-dialog .unblock-days {
     display: flex;
     flex-wrap: wrap;
-    height: 3rem;
+    height: 2.5rem;
 }
 
 .block-dialog .unblock-days .rw-widget-picker {
@@ -15,4 +15,8 @@
 
 .block-dialog .unblock-days INPUT[name="days"] {
     width: 100%;
+}
+
+.block-dialog DETAILS SUMMARY {
+    margin-bottom: .5rem;
 }
