--- a/src/ui/complains/Complain.css
+++ b/src/ui/complains/Complain.css
@@ -1,5 +1,5 @@
 .user-complain {
-    background-color: var(--comments);
+    background-color: var(--bs-gray-100);
     border-radius: .25rem;
     padding: .5rem;
     overflow-wrap: break-word;
