--- a/src/ui/feed/FeedSentinel.css
+++ b/src/ui/feed/FeedSentinel.css
@@ -14,6 +14,11 @@
     margin-bottom: 1rem;
 }
 
+.feed-sentinel.loading {
+    background-color: transparent;
+    border-color: transparent;
+}
+
 .feed-sentinel:hover {
     background-color: var(--highlight);
 }
