Sending a request to the provider to delete the node.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -3,6 +3,7 @@
     --highlight: rgba(0, 0, 0, .05);
     --highlight-light: rgba(0, 0, 0, .025);
     --highlight-blue: rgba(0, 123, 255, .1);
+    --highlight-red: rgba(220, 53, 69, .1);
     --highlight-cyan: #f0fafa;
 
     /*
