Posting font magnitude in CSS variables to use in all places where needed.

--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -80,6 +80,7 @@
 
 .posting > .content .read-more {
     width: 100%;
+    font-size: var(--posting-font-magnitude);
     text-align: left;
     padding-left: 0;
     padding-top: 0;
