--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -15,6 +15,12 @@ BODY {
     height: 100%;
 }
 
+@media only screen and (max-width: 575px) {
+    BODY .dropdown-menu {
+        --bs-dropdown-font-size: 1.1rem;
+    }
+}
+
 BODY.no-scroll {
     overflow: hidden;
 }
