--- a/src/ui/complaints/ComplaintsListPage.css
+++ b/src/ui/complaints/ComplaintsListPage.css
@@ -1,4 +1,4 @@
-.complains .navigator {
+.complaints .navigator {
     margin-bottom: .25em;
     display: flex;
     justify-content: space-between;
