--- a/src/ui/control/Loading.css
+++ b/src/ui/control/Loading.css
@@ -12,6 +12,5 @@
     opacity: 60%;
     z-index: var(--zindex-overlay-loading);
     display: grid;
-    justify-items: center;
-    align-items: center;
+    place-items: center;
 }
