--- a/src/ui/control/richtexteditor/visual/VisualTextArea.css
+++ b/src/ui/control/richtexteditor/visual/VisualTextArea.css
@@ -3,22 +3,39 @@
     font-size: unset;
 }
 
-.rich-text-editor .ql-editor h1 {
+.rich-text-editor .ql-editor H1 {
     font-size: calc(1.375rem + 1.5vw);
 }
 
-.rich-text-editor .ql-editor h2 {
+.rich-text-editor .ql-editor H2 {
     font-size: calc(1.325rem + .9vw);
 }
 
-.rich-text-editor .ql-editor h3 {
+.rich-text-editor .ql-editor H3 {
     font-size: calc(1.3rem + .6vw);
 }
 
-.rich-text-editor .ql-editor h4 {
+.rich-text-editor .ql-editor H4 {
     font-size: calc(1.275rem + .3vw);
 }
 
-.rich-text-editor .ql-editor h5 {
+.rich-text-editor .ql-editor H5 {
     font-size: calc(1.25rem);
+}
+
+.rich-text-editor .ql-editor BLOCKQUOTE {
+    border-left: 3px solid var(--bs-cyan);
+    padding: .2rem .2rem .2rem 2.7rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.rich-text-editor .ql-editor BLOCKQUOTE::before {
+    content: "\201C";
+    font-family: serif;
+    font-size: 4rem;
+    color: var(--bs-cyan);
+    position: absolute;
+    left: .5rem;
+    top: -1.5rem;
 }
