--- a/src/ui/control/richtexteditor/visual/VisualTextArea.css
+++ b/src/ui/control/richtexteditor/visual/VisualTextArea.css
@@ -51,3 +51,8 @@
     height: 100%;
     width: 1.5rem;
 }
+
+.rich-text-editor .ql-editor .mention {
+    color: var(--bs-link-color);
+    text-decoration: underline;
+}
