Inline spoilers in the visual editor.

--- a/src/ui/control/richtexteditor/visual/VisualTextArea.css
+++ b/src/ui/control/richtexteditor/visual/VisualTextArea.css
@@ -15,3 +15,10 @@
 .visual-text-area A {
     text-decoration: underline;
 }
+
+.visual-text-area .spoiler {
+    background-color: var(--bs-gray-300);
+    color: unset;
+    font-weight: unset;
+    cursor: unset;
+}
