--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -45,6 +45,31 @@ DETAILS[open] {
     cursor: unset;
 }
 
+BLOCKQUOTE {
+    border-left: 3px solid var(--bs-cyan);
+    padding: .2rem .2rem .2rem 2.7rem;
+    position: relative;
+    overflow: hidden;
+}
+
+BLOCKQUOTE BLOCKQUOTE {
+    padding-left: 1.5rem;
+}
+
+BLOCKQUOTE:not(BLOCKQUOTE BLOCKQUOTE)::before {
+    content: "\201C";
+    font-family: serif;
+    font-size: 4rem;
+    color: var(--bs-cyan);
+    position: absolute;
+    left: .5rem;
+    top: -1.5rem;
+}
+
+BLOCKQUOTE BLOCKQUOTE:last-child, BLOCKQUOTE P:last-child {
+    margin-bottom: 0;
+}
+
 .emoji {
     background-repeat: no-repeat;
     color: transparent;
