Block spoilers in the visual editor.

--- a/src/ui/control/richtexteditor/visual/VisualTextArea.css
+++ b/src/ui/control/richtexteditor/visual/VisualTextArea.css
@@ -23,6 +23,10 @@
     cursor: unset;
 }
 
+.visual-text-area DIV.spoiler {
+    margin-bottom: 1rem;
+}
+
 .visual-text-area .mention {
     color: var(--bs-link-color);
 }
