--- a/src/ui/control/richtexteditor/RichTextEditorButton.css
+++ b/src/ui/control/richtexteditor/RichTextEditorButton.css
@@ -7,6 +7,10 @@
     height: 1.7em;
 }
 
+.rich-text-editor-button.selector {
+    width: fit-content;
+}
+
 .rich-text-editor-button.active {
     color: var(--bs-primary);
 }
@@ -19,4 +23,10 @@
 .rich-text-editor-button.active:hover {
     background-color: var(--highlight-blue);
     color: var(--bs-primary);
+}
+
+.rich-text-editor-button .text {
+    font-size: 1rem;
+    font-weight: normal;
+    color: var(--bs-gray-800);
 }
