Disabled state of heading format button.

--- a/src/ui/control/richtexteditor/RichTextEditorButton.css
+++ b/src/ui/control/richtexteditor/RichTextEditorButton.css
@@ -7,6 +7,10 @@
     height: 1.7em;
 }
 
+.rich-text-editor-button:disabled {
+    color: var(--bs-gray-400);
+}
+
 .rich-text-editor-button.selector {
     width: fit-content;
 }
@@ -15,7 +19,7 @@
     color: var(--bs-primary);
 }
 
-.rich-text-editor-button:hover {
+.rich-text-editor-button:hover:not(:disabled) {
     background-color: var(--highlight);
     color: var(--bs-gray-800);
 }
@@ -29,4 +33,8 @@
     font-size: 1rem;
     font-weight: normal;
     color: var(--bs-gray-800);
+}
+
+.rich-text-editor-button:disabled .text {
+    color: var(--bs-gray-400);
 }
